5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1709_3032.log
== TEST (2019-05-02 11:26:56) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	print(sqrt(x))
else:
	print(sqrt**3(x))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:27:08) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	print(sqrt(x))
else:
	print(sqrt**3(x))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:27:37) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	print(sqrt(f))
else:
	print(sqrt**3(f))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:28:14) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	print("sqrt(f)")
else:
	print(sqrt**3(f))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:28:39) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	print(sqrt"(f)")
else:
	print(sqrt**3(f))
-- ERROR:
File "XXXX", line 10
    print(sqrt"(f)")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:29:09) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	print(sqrt(f))
else:
	print(sqrt**3(f))
-- EXECUTION TIME:
0.151428
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4106735979665885
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:29:39) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	print(abs(sqrt(f)))
else:
	print(abs(sqrt**3(f)))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:29:45) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	print(abs(sqrt(f)))
else:
	print(abs(sqrt**3(f)))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:29:56) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	print(abs(sqrt(f)))
else:
	print(abs(sqrt**3(f)))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:03) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	print(abs(f**(1/2))
else:
	print(abs(f**(1/3))
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:12) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	print(abs(f**(1/2))
else:
	print(abs(f**(1/3))
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:21) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	print(abs(f**(1/2))
else:
	print(abs(f**(1/3))
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:15) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	x = abs(f**(1/2)
	print(round(x,4))		  
else:
	x = (abs(f**(1/3))
	print(round(x,4))
-- ERROR:
File "XXXX", line 11
    print(round(x,4))		  
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:33) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	x = abs(f**(1/2)
	print(round(x,4))		  
else:
	x = (abs(f**(1/3))
	print(round(x,4))
-- ERROR:
File "XXXX", line 11
    print(round(x,4))		  
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:54) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	x = abs(f**(1/2))
	print(round(x,4))		  
else:
	x = (abs(f**(1/3))
	print(round(x,4))
-- ERROR:
File "XXXX", line 14
    print(round(x,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:16) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	x = abs(f**(1/2))
	print(round(x,4))		  
else:
	x = (abs(f**(1/3))
	print(round(x,4))
-- ERROR:
File "XXXX", line 14
    print(round(x,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:35) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	x = abs(f**(1/2))
	print(round(x,4))		  
else:
	x = abs(f**(1/3))
	print(round(x,4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:46) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	x = abs(f**(1/2))
	print(round(x,4))		  
else:
	x = abs(f**(1/3))
	print(round(x,4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:34:53) 
-- CODE:
from math import*

f = float(input("number:"))

if(f <= 0):
	print("0")
elif(f > 0) and (f <= 1):
	print("1")
elif(f > 1 ) and (f <= 2):
	x = abs(f**(1/2))
	print(round(x,4))		  
else:
	x = abs(f**(1/3))
	print(round(x,4))
-- EXECUTION TIME:
0.225689
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4107
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.262
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
